--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,6 +44,11 @@
                            href="{{ path('front_characters') }}">Characters</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link {% if app.request.get('_route') starts with 'front_creators' %}active{% endif %}"
+                           href="{{ path('front_creators') }}">Creators</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
