--- a/templates/creators/index.html.twig
+++ b/templates/creators/index.html.twig
@@ -1,20 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CreatorsController!{% endblock %}
+{% block title %}Liste des auteurs{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/src/Controller/CreatorsController.php</code></li>
-        <li>Your template at <code>/home/ubuntu/PhpstormProjects/marvel-explorer/templates/creators/index.html.twig</code></li>
-    </ul>
-</div>
+    <!-- 📚 Liste des auteurs -->
+    <div class="creators-list">
+        {% for letter, creators in groupedAuthors %}
+            <section class="letter-group" id="{{ letter }}">
+                <h2 class="sticky-letter">{{ letter }}</h2>
+                <ul>
+                    {% for creator in creators %}
+                        <li>
+                            <a href="creators/{{ creator.marvelId }}-{{ creator.fullName |slug|lower }}">
+                                {{ creator. fullName }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </section>
+        {% endfor %}
+    </div>
+    <!-- 🔠 Barre alphabétique -->
+    <div class="pagination">
+        {% for letter in alphabet %}
+            {% if groupedAuthors[letter] is defined %}
+                <a href="#{{ letter }}" class="has-creators">{{ letter }}</a>
+            {% else %}
+                <span class="no-creators">{{ letter }}</span>
+            {% endif %}
+        {% endfor %}
+    </div>
 {% endblock %}
