--- a/templates/characters/_list.html.twig
+++ b/templates/characters/_list.html.twig
@@ -3,7 +3,7 @@
         <article class="character-card">
             <img src="{{ character.thumbnail ?: asset('assets/images/character-no-img.jpg') }}"
                  alt="{{ character.name }}">
-            <div>
+            <div class = "card-infos">
                 <p>{{ character.name }}</p>
             </div>
         </article>
