--- a/templates/home/_list.html.twig
+++ b/templates/home/_list.html.twig
@@ -3,7 +3,7 @@
         <a href="/comics/{{ comic.marvelId }}-{{ comic.title |slug|lower }}">
             <article class="comic-card">
                 <img src="{{ comic.thumbnail ?: asset('assets/images/no-img.jpg') }}" alt="{{ comic.title }}">
-                <div>
+                <div class="card-infos">
                     <p>{{ comic.title }}</p>
                     <p>{{ comic.date is defined and comic.date ? comic.date|date("Y-m-d") : 'unknown date' }}</p>
                 </div>
